Update content, img & css

--- a/www.hookamonk.com/src/html/v2/footer.njk
+++ b/www.hookamonk.com/src/html/v2/footer.njk
@@ -13,16 +13,16 @@
       <div class="footer__list mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
         <ul>
           <li><a href="#testimonials">FAQ</a></li>
-          <li><a href="#">Shop</a></li>
-          <li><a href="#products">Amina</a></li>
-          <li><a href="#products">Nebulla</a></li>
-          <li><a href="#products">Accesories</a></li>
+          <li><a href="https://shop.hookamonk.com/">Shop</a></li>
+          <li><a href="https://www.animahookah.com/">Anima</a></li>
+          <li><a href="https://shop.hookamonk.com/nebulla/">Nebulla</a></li>
+          <li><a href="https://shop.hookamonk.com/accessories/">Accessories</a></li>
         </ul>
       </div>
       <div class="footer__contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-8-desktop">
         <div class="footer__contact--name">
           <span itemprop="legalName"><b>Hookamonk s.r.o.</b></span>
-          <p>If you want hookamonk for your place please contact us on email:<a href="mailto:sales@hookamonk.com">
+          <p>Get in touch with us: <a href="mailto:sales@hookamonk.com">
               sales@hookamonk.com</a>
           </p>
         </div>
