--- a/www.hookamonk.com/src/stylesheets/v2/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/typography.scss
@@ -7,7 +7,7 @@
   --hm-grey--light: #828282;
   --hm-grey--lighter: #BDBDBD;
 
-  --hm-orange: #FF9201;
+  --hm-orange: #EDA643;
   --hm-orange--light: #FFE6C5;
 
   --hm-green: #35B289;
@@ -21,7 +21,7 @@ body {
   margin: 0;
   padding: 0;
   letter-spacing: 0;
-  font: 18px/1.25 "Work Sans", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
+  font: 18px/1.25 "Poppins", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
   Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
   "Segoe UI Symbol";
   font-kerning: normal;
