--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -43,7 +43,7 @@
           <h1>Game <span class="text--orange">changer</span> in hookah world</h1>
           <p class="title__suffix">First fully electronic hookah set for tobacco.</p>
           <button class="button button__contained button__contained--dark">
-            <a href="#about" class="button__label">Next</a>
+            <a href="#about" class="button__label page-scroll">Discover more</a>
           </button>
         </div>
       </div>
@@ -54,7 +54,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="hm-about__text mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-          <p class="title__prefix">Design anything, build everything</p>
+          <p class="title__prefix">Game changer in hookah world</p>
           <h2>Hookamonk story</h2>
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
@@ -86,10 +86,10 @@
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
                width="600px"
-               src="{{ "/hookamonk.com/img_story1.png" | cloudinaryUrl(width=600) }}"
-               srcset="{{ "/hookamonk.com/img_story1.png" | cloudinaryUrl(width=600) }} 1x,
-                     {{ "/hookamonk.com/img_story1.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
-                     {{ "/hookamonk.com/img_story1.png" | cloudinaryUrl(width=600,dpr=2) }} 2x" />
+               src="{{ "/hookamonk.com/img_story3.png" | cloudinaryUrl(width=600) }}"
+               srcset="{{ "/hookamonk.com/img_story3.png" | cloudinaryUrl(width=600) }} 1x,
+                     {{ "/hookamonk.com/img_story3.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
+                     {{ "/hookamonk.com/img_story3.png" | cloudinaryUrl(width=600,dpr=2) }} 2x" />
         </div>
       </div>
     </div>
@@ -98,10 +98,10 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <p class="title__prefix">Design anything, build everything</p>
+          <p class="title__prefix">Game changer in hookah world</p>
           <h2>Key features</h2>
         </div>
-        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
           <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
               <path fill="currentColor"
@@ -113,7 +113,7 @@
             controlled by smart electronic device. No more dirty job and bad smell at
             your&nbsp;place.</p>
         </div>
-        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
            <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
               <path fill="currentColor"
@@ -125,7 +125,7 @@
             of a pleasant smoking experience throughout the session without any external
             assistance needed.</p>
         </div>
-        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
            <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
               <path fill="currentColor"
@@ -138,7 +138,7 @@
             enjoy smoking at your place. A&nbsp;truly win-win-win situation. Individual plans
             available.</p>
         </div>
-        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
           <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
               <path fill="currentColor"
@@ -249,7 +249,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <p class="title__prefix">Design anything, build everything</p>
+          <p class="title__prefix">Game changer in hookah world</p>
           <h2>These companies partnered with us to drive growth</h2>
         </div>
         <div class="hm-partners__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -448,8 +448,8 @@
           get in touch with us for your individual plan</p>
           <h2>I want Warp</h2>
         </div>
-        <div class="hm-warp__type hm-warp__type--b2b mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-          <h3>For home</h3>
+        <div class="hm-warp__type hm-warp__type--b2b mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+          <h3>For <br>home</h3>
           <h4>Fixed monthly fee, transparent pricing, no hidden charges</h4>
           <p>2 weeks trial free of charge<br>
              For personal use only</p>
@@ -457,11 +457,20 @@
             <a href="#" class="button__label">Next</a>
           </button>
         </div>
-        <div class="hm-warp__type hm-warp__type--b2c mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <div class="hm-warp__type hm-warp__type--b2c mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+          <h3>For workspace</h3>
+          <h4>No initial down payments</h4>
+          <p>Monthly payments based on the number of Warp sessions served<br>
+             We earn when you earn, we earn when you have customers enjoying Warp session at your place</p>
+          <button class="button button__contained button__contained--white">
+            <a href="#" class="button__label">Next</a>
+          </button>
+        </div>
+         <div class="hm-warp__type hm-warp__type--b2c mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
           <h3>For business</h3>
           <h4>No initial down payments</h4>
           <p>Monthly payments based on the number of Warp sessions served<br>
-             We earn when you earn, we earn when you have customers enjoying Warp session at your place (A win-win-win situation!)</p>
+             We earn when you earn, we earn when you have customers enjoying Warp session at your place</p>
           <button class="button button__contained button__contained--white">
             <a href="#" class="button__label">Next</a>
           </button>
@@ -679,7 +688,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <p class="title__prefix">Design anything, build everything</p>
+          <p class="title__prefix">Game changer in hookah world</p>
           <h2>Other products</h2>
         </div>
         <div class="hm-product-type mdc-layout-grid__cell">
@@ -690,45 +699,43 @@
           </div>
           <div class="hm-product-type__inner">
             <div class="hm-product-type__text">
-              <h3>Amina</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus
-                vestibulum scelerisque eu.Lorem ipsum dolor sit amet.</p>
+              <h3>Anima</h3>
+              <p>The unique hookahs for the spiritual dimension of the contemporary smoking experience.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="#">More info</a>
+              <a href="https://www.animahookah.com/" target="_blank">More info</a>
             </div>
           </div>
         </div>
         <div class="hm-product-type mdc-layout-grid__cell">
           <div class="hm-product-type__img">
-            <img class="optimalization" alt="Warp Nebulla" loading="lazy" src="{{ "/hookamonk.com/img_products-nebulla.jpg" | cloudinaryUrl }}"
+            <img class="optimalization" alt="Warp Nebulla" loading="lazy" src="{{ "/hookamonk.com/img_products-nebulla2.jpg" | cloudinaryUrl }}"
                  width="480"
                  height="300">
           </div>
           <div class="hm-product-type__inner">
             <div class="hm-product-type__text">
               <h3>Nebulla</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus.</p>
+              <p>Durable, elegant and well manufactured hookah for a lifetime daily use.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="#">More info</a>
+              <a href="https://shop.hookamonk.com/nebulla/" target="_blank">More info</a>
             </div>
           </div>
         </div>
         <div class="hm-product-type mdc-layout-grid__cell">
           <div class="hm-product-type__img">
             <img class="optimalization" alt="Accessories" loading="lazy"
-                 src="{{ "/hookamonk.com/img_products-accessories.jpg" | cloudinaryUrl }}" width="480"
+                 src="{{ "/hookamonk.com/img_products-accessories3.jpg" | cloudinaryUrl }}" width="480"
                  height="300">
           </div>
           <div class="hm-product-type__inner">
             <div class="hm-product-type__text">
               <h3>Accessories</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus
-                vestibulum scelerisque scelerisque eu.</p>
+              <p>Treat yourself and your friends with our unique hookah accessories.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="#">More info</a>
+              <a href="https://shop.hookamonk.com/accessories/" target="_blank">More info</a>
             </div>
           </div>
         </div>
@@ -748,7 +755,7 @@
                      {{ "/hookamonk.com/img_catering.jpg" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-          <p class="title__prefix">Design anything, build everything</p>
+          <p class="title__prefix">Game changer in hookah world</p>
           <h2>Hookah catering</h2>
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
