--- a/www.hookamonk.com/src/stylesheets/v2/main.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/main.scss
@@ -56,3 +56,16 @@ main .material-icons {
   background-color: var(--hm-orange--light);
 }
 //
+
+// Zoom
+.zoom {
+  transition: transform .2s; /* Animation */
+}
+
+.zoom:hover {
+  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  background-color: fff;
+  box-shadow: 5px 10px 10px #ddd;
+  padding: 10px;
+  border-radius: 10px;
+}
