Update animations, fonts, css

--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -29,7 +29,7 @@
   <section class="hm-intro">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
-        <div class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <div class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow bounceInLeft">
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
                width="600px"
@@ -40,10 +40,10 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <p class="title__prefix">We present warp</p>
-          <h1>Game <span class="text--orange">changer</span> in hookah world</h1>
+          <h1>Game <span class="text--orange"><strong>changer</span></strong> in hookah world</h1>
           <p class="title__suffix">First fully electronic hookah set for tobacco.</p>
           <button class="button button__contained button__contained--dark">
-            <a href="#about" class="button__label page-scroll">Discover more</a>
+            <a href="#about" class="button__label">Discover more</a>
           </button>
         </div>
       </div>
@@ -82,19 +82,19 @@
             </div>
           </div>
         </div>
-        <div class="hm-about__img mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <div class="hm-about__img mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow flipInX">
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
                width="600px"
-               src="{{ "/hookamonk.com/img_story3.png" | cloudinaryUrl(width=600) }}"
-               srcset="{{ "/hookamonk.com/img_story3.png" | cloudinaryUrl(width=600) }} 1x,
-                     {{ "/hookamonk.com/img_story3.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
-                     {{ "/hookamonk.com/img_story3.png" | cloudinaryUrl(width=600,dpr=2) }} 2x" />
+               src="{{ "/hookamonk.com/img_story5.png" | cloudinaryUrl(width=600) }}"
+               srcset="{{ "/hookamonk.com/img_story5.png" | cloudinaryUrl(width=600) }} 1x,
+                     {{ "/hookamonk.com/img_story5.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
+                     {{ "/hookamonk.com/img_story5.png" | cloudinaryUrl(width=600,dpr=2) }} 2x" />
         </div>
       </div>
     </div>
   </section>
-  <section id="features" class="hm-features">
+  <section id="features" class="hm-features qt  wow rollIn">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -150,7 +150,7 @@
             its clear&nbsp;taste.</p>
         </div>
 
-        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
           <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
               <path fill="currentColor"
@@ -162,7 +162,7 @@
             patented shisha funnel. No other stuff needed, you can smoke in 15&nbsp;minutes
             after unpacking the device.</p>
         </div>
-        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
            <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
               <path fill="currentColor"
@@ -174,7 +174,7 @@
             features an overview of running table sessions, monitors session run time,
             maintenance status and allows to remotely control the hookahs.</p>
         </div>
-        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
           <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
               <path fill="currentColor"
@@ -186,7 +186,7 @@
             whole session. No extra tweaking needed and even hookah beginner can shine with
             a delicious hookah.</p>
         </div>
-        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
            <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
               <path fill="currentColor"
@@ -198,7 +198,7 @@
             with Hookamonk.</p>
         </div>
 
-        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
            <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
               <path fill="currentColor"
@@ -210,7 +210,7 @@
             in, the just right temperature is intelligently kept otherwise. No more
             unpleasant sessions caused by bad charcoal management.</p>
         </div>
-        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
           <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
               <path fill="currentColor"
@@ -221,7 +221,7 @@
           <p>Whether you like your hookah stronger or smoother, you can change its
             intensity on display or in your mobile&nbsp;app.</p>
         </div>
-        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
           <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
               <path fill="currentColor"
@@ -232,7 +232,7 @@
           <p>Hookamonk is kept up to date thanks to connection to wifi. All of our devices
             are updated automatically on regular&nbsp;basis.</p>
         </div>
-        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
            <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
               <path fill="currentColor"
@@ -245,7 +245,7 @@
         </div>
       </div>
     </div>
-    <section id="partners" class="hm-partners">
+    <section id="partners" class="hm-partners wow bounceInLeft">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -440,7 +440,7 @@
       </div>
     </div>
   </section>
-  <section id="warp" class="hm-warp">
+  <section id="warp" class="hm-warp wow bounceInRight">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -448,29 +448,29 @@
           get in touch with us for your individual plan</p>
           <h2>I want Warp</h2>
         </div>
-        <div class="hm-warp__type hm-warp__type--b2b mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+        <div class="hm-warp__type hm-warp__type--b2b mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop zoom">
           <h3>For <br>home</h3>
           <h4>Fixed monthly fee, transparent pricing, no hidden charges</h4>
-          <p>2 weeks trial free of charge<br>
-             For personal use only</p>
+          <p>✓ 2 weeks trial free of charge<br>
+             ✓  For personal use only</p>
           <button class="button button__contained button__contained--white">
             <a href="#" class="button__label">Next</a>
           </button>
         </div>
-        <div class="hm-warp__type hm-warp__type--b2c mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+        <div class="hm-warp__type hm-warp__type--b2c mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop zoom">
           <h3>For workspace</h3>
           <h4>No initial down payments</h4>
-          <p>Monthly payments based on the number of Warp sessions served<br>
-             We earn when you earn, we earn when you have customers enjoying Warp session at your place</p>
+          <p>✓ Monthly payments based on the number of Warp sessions served<br>
+             ✓ We earn when you earn, we earn when you have customers enjoying Warp session at your place</p>
           <button class="button button__contained button__contained--white">
             <a href="#" class="button__label">Next</a>
           </button>
         </div>
-         <div class="hm-warp__type hm-warp__type--b2c mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+         <div class="hm-warp__type hm-warp__type--b2d mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop zoom">
           <h3>For business</h3>
           <h4>No initial down payments</h4>
-          <p>Monthly payments based on the number of Warp sessions served<br>
-             We earn when you earn, we earn when you have customers enjoying Warp session at your place</p>
+          <p>✓ Monthly payments based on the number of Warp sessions served<br>
+             ✓ We earn when you earn, we earn when you have customers enjoying Warp session at your place</p>
           <button class="button button__contained button__contained--white">
             <a href="#" class="button__label">Next</a>
           </button>
@@ -478,7 +478,7 @@
       </div>
     </div>
   </section>
-  <section id="testimonials" class="hm-testimonials">
+  <section id="testimonials" class="hm-testimonials wow bounceInLeft">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -691,7 +691,7 @@
           <p class="title__prefix">Game changer in hookah world</p>
           <h2>Other products</h2>
         </div>
-        <div class="hm-product-type mdc-layout-grid__cell">
+        <div class="hm-product-type mdc-layout-grid__cell zoom">
           <div class="hm-product-type__img">
             <img class="optimalization" alt="Warp Amina" loading="lazy" src="{{ "/hookamonk.com/img_products-amina.jpg" | cloudinaryUrl }}"
                  width="480"
@@ -707,7 +707,7 @@
             </div>
           </div>
         </div>
-        <div class="hm-product-type mdc-layout-grid__cell">
+        <div class="hm-product-type mdc-layout-grid__cell zoom">
           <div class="hm-product-type__img">
             <img class="optimalization" alt="Warp Nebulla" loading="lazy" src="{{ "/hookamonk.com/img_products-nebulla2.jpg" | cloudinaryUrl }}"
                  width="480"
@@ -723,7 +723,7 @@
             </div>
           </div>
         </div>
-        <div class="hm-product-type mdc-layout-grid__cell">
+        <div class="hm-product-type mdc-layout-grid__cell zoom">
           <div class="hm-product-type__img">
             <img class="optimalization" alt="Accessories" loading="lazy"
                  src="{{ "/hookamonk.com/img_products-accessories3.jpg" | cloudinaryUrl }}" width="480"
@@ -745,14 +745,14 @@
   <section class="hm-catering">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow bounceInLeft zoom">
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
                width="530px"
-               src="{{ "/hookamonk.com/img_catering.jpg" | cloudinaryUrl(width=530) }}"
-               srcset="{{ "/hookamonk.com/img_catering.jpg" | cloudinaryUrl(width=530) }} 1x,
-                     {{ "/hookamonk.com/img_catering.jpg" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
-                     {{ "/hookamonk.com/img_catering.jpg" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
+               src="{{ "/hookamonk.com/img_catering-2.jpg" | cloudinaryUrl(width=530) }}"
+               srcset="{{ "/hookamonk.com/img_catering-2.jpg" | cloudinaryUrl(width=530) }} 1x,
+                     {{ "/hookamonk.com/img_catering-2.jpg" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
+                     {{ "/hookamonk.com/img_catering-2.jpg" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <p class="title__prefix">Game changer in hookah world</p>
