--- a/www.hookamonk.com/src/stylesheets/v2/catering.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/catering.scss
@@ -1,223 +1,214 @@
 // Catering Page //
 @media (max-width: 839px) {
-  img {
-    width: 100%;
-    height: auto;
-  }
+    img {
+        width: 100%;
+        height: auto;
+    }
 }
 
 @media screen and (min-width: 840px) {
-  img.optimalization {
-    width: 100%;
-    height: auto;
-  }
+    img.optimalization {
+        width: 100%;
+        height: auto;
+    }
 }
 
 // Section 1: Introduction AKA Header Info //
 .hm-intro {
-  background-image: cloudinaryUrl("hookamonk.com/bg_header-smoke.jpg");
-  background-size: 50% auto;
-  background-position: 0 20%;
-  background-repeat: no-repeat;
-
-  .hm-intro__header-bg {
-    picture {
-      z-index: 100;
+    background-image: cloudinaryUrl("hookamonk.com/bg_header-smoke-2.jpg");
+    background-position: 0 100px;
+    background-repeat: no-repeat;
+    height: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    .hm-intro__header-bg {
+        picture {
+            z-index: 100;
+        }
     }
-  }
 }
 
 //
 // Section 2: Partners //
 .hm-partners {
-  text-align: center;
-  background-color: var(--hm-bg--light);
-
-  h2 {
-    font-size: 28px;
-    line-height: 30px;
-  }
-
-  .hm-partners__logo {
-    svg {
-      padding: 0 1em;
+    text-align: center;
+    background-color: var(--hm-bg--light);
+    h2 {
+        font-size: 28px;
+        line-height: 30px;
     }
-  }
+    .hm-partners__logo {
+        svg {
+            padding: 0 1em;
+        }
+    }
 }
 
 //
 // Section 3: About AKA HM Story
 .hm-about {
-  background-image: cloudinaryUrl("hookamonk.com/bg_story-smoke.jpg");
-  background-color: var(--hm-bg--light);
-  background-size: 50% auto;
-  background-position: 100% 0;
-  background-repeat: no-repeat;
-
-  .hm-about__text {
-    align-self: center;
-  }
+    background-image: cloudinaryUrl("hookamonk.com/bg_story-smoke.jpg");
+    background-color: var(--hm-bg--light);
+    background-size: 50% auto;
+    background-position: 100% 0;
+    background-repeat: no-repeat;
+    .hm-about__text {
+        align-self: center;
+    }
 }
 
 //
 // Section 4: Features
 .hm-features {
-  .hm-features__content {
-    @media (max-width: 439px) {
-      margin-bottom: 2em;
+    .hm-features__content {
+        @media (max-width: 439px) {
+            margin-bottom: 2em;
+        }
     }
-  }
 }
 
 //
 // Section 5: Testimonials
 .hm-testimonials {
-  color: var(--hm-white);
-  text-align: center;
-  background-color: var(--hm-grey--dark);
-
-  .hm-testimonials__content {
-    font-size: 28px;
-    font-weight: 400;
-    line-height: 40px;
     color: var(--hm-white);
-
-    max-width: 740px;
-    margin: 1em auto;
-  }
-
-  .hm-testimonials__logo {
-    margin-bottom: 3em;
-
-    svg {
-      padding: 0 1em;
+    text-align: center;
+    background-color: var(--hm-grey--dark);
+    .hm-testimonials__content {
+        font-size: 28px;
+        font-weight: 400;
+        line-height: 40px;
+        color: var(--hm-white);
+        max-width: 740px;
+        margin: 1em auto;
     }
-  }
-
-  .facts {
-    .facts__number {
-      font-size: 68px;
-      font-weight: 700;
-      line-height: 80px;
+    .hm-testimonials__logo {
+        margin-bottom: 3em;
+        svg {
+            padding: 0 1em;
+        }
     }
-
-    .facts__text {
-      color: var(--hm-grey--lighter);
+    .facts {
+        .facts__number {
+            font-size: 68px;
+            font-weight: 700;
+            line-height: 80px;
+        }
+        .facts__text {
+            color: var(--hm-grey--lighter);
+        }
     }
-  }
 }
 
 //
 // Section 6: Warp
 .hm-warp {
-  text-align: center;
-
-  .hm-warp__type {
-    text-align: left;
-    border-radius: 10px;
-    @media (max-width: 839px){
-      padding: 0 18px 38px;
-    }
-    @media (min-width: 840px){
-      padding: 1em 5em 6em;
-    }
-
-    h3, h4, p {
-      color: var(--hm-white);
-      margin-bottom: 0;
-    }
-
-    h3 {
-      font-size: 48px;
-      font-weight: 700;
-      line-height: 58px;
-    }
-
-    button {
-      margin-top: 2em;
-    }
-  }
-
-  @media (max-width: 839px){
+    text-align: center;
     .hm-warp__type {
-      background-color: var(--hm-grey--dark);
+        text-align: left;
+        border-radius: 10px;
+        @media (max-width: 839px) {
+            padding: 0 18px 38px;
+        }
+        @media (min-width: 840px) {
+            padding: 1em 3em 4em;
+        }
+        h3,
+        h4,
+        p {
+            color: var(--hm-white);
+            margin-bottom: 0;
+        }
+        h3 {
+            font-size: 48px;
+            font-weight: 700;
+            line-height: 58px;
+        }
+        button {
+            margin-top: 2em;
+        }
     }
-  }
-  @media (min-width: 840px) and (max-width: 1439px){
-    .hm-warp__type--b2b {
-      background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2b.jpg");
-      /*background-size: auto 100%;*/
-      background-position: 100% 0;
-      background-repeat: no-repeat;
+    @media (max-width: 1000px) {
+        .hm-warp__type {
+            background-color: var(--hm-grey--dark);
+        }
     }
-
-    .hm-warp__type--b2c {
-      background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2c.jpg");
-      /*background-size: auto 100%;*/
-      background-position: 100% 0;
-      background-repeat: no-repeat;
+    @media (min-width: 1001px) and (max-width: 1139px) {
+        .hm-warp__type--b2b {
+            background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2b-3.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+        .hm-warp__type--b2c {
+            background-image: cloudinaryUrl("hookamonk.com/bbg_warp-b2c-3.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+        .hm-warp__type--b2d {
+            background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2d-3.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
     }
-  }
-  @media screen and (min-width: 1440px){
-    .hm-warp__type--b2b {
-      background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2b.jpg");
-      /*background-size: auto 100%;*/
-      background-position: 100% 0;
-      background-repeat: no-repeat;
+    @media screen and (min-width: 1140px) {
+        .hm-warp__type--b2b {
+            background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2b-3.jpg");
+            /*background-size: auto 100%;*/
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+        .hm-warp__type--b2c {
+            background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2c-3.jpg");
+            /*background-size: auto 100%;*/
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+        .hm-warp__type--b2d {
+            background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2d-3.jpg");
+            /*background-size: auto 100%;*/
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
     }
-
-    .hm-warp__type--b2c {
-      background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2c.jpg");
-      /*background-size: auto 100%;*/
-      background-position: 100% 0;
-      background-repeat: no-repeat;
-    }
-  }
 }
 
 //
 // Section 7: Other Products
 .hm-products {
-  background-color: var(--hm-bg--light);
-
-  .title {
-    text-align: center;
-  }
-
-  .hm-product-type {
-    box-shadow: 0 100px 100px rgba(0, 0, 0, 0.12);
-    border-radius: 10px;
-
-    .hm-product-type__link {
-      padding-top: 1em;
-
-      a {
-        font-size: 18px;
-        font-weight: 600;
-        color: var(--hm-grey--dark);
-        text-decoration: none;
-
-        &:hover {
-          cursor: pointer;
-          color: var(--hm-orange);
-          transition: all 0.3s;
-        }
-      }
+    background-color: var(--hm-bg--light);
+    .title {
+        text-align: center;
     }
-  }
-
-  .hm-product-type__inner {
-    flex-grow: 1;
-    justify-content: space-between;
-    padding: 0.5em 2em 2em;
-  }
-
-  .hm-product-type, .hm-product-type__inner {
-    display: flex;
-    flex-direction: column;
-  }
+    .hm-product-type {
+        box-shadow: 0 100px 100px rgba(0, 0, 0, 0.12);
+        border-radius: 10px;
+        .hm-product-type__link {
+            padding-top: 1em;
+            a {
+                font-size: 18px;
+                font-weight: 600;
+                color: var(--hm-grey--dark);
+                text-decoration: none;
+                &:hover {
+                    cursor: pointer;
+                    color: var(--hm-orange);
+                    transition: all 0.3s;
+                }
+            }
+        }
+    }
+    .hm-product-type__inner {
+        flex-grow: 1;
+        justify-content: space-between;
+        padding: 0.5em 2em 2em;
+    }
+    .hm-product-type,
+    .hm-product-type__inner {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 //
 // Section 8: Hookah Catering
-
