--- a/www.hookamonk.com/src/stylesheets/v2/main.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/main.scss
@@ -1,71 +1,83 @@
 @import "@material/layout-grid/mdc-layout-grid";
-
 :root {
-  --mdc-layout-grid-margin-desktop: 24px;
-  --mdc-layout-grid-gutter-desktop: 20px;
-  --mdc-layout-grid-column-width-desktop: 60px;
-
-  --hm-btn-transition: all 100ms ease-in-out;
+    --mdc-layout-grid-margin-desktop: 24px;
+    --mdc-layout-grid-gutter-desktop: 20px;
+    --mdc-layout-grid-column-width-desktop: 60px;
+    --hm-btn-transition: all 100ms ease-in-out;
 }
 
 body {
-  padding: 0;
-  margin: 0;
-  scroll-behavior: smooth;
+    padding: 0;
+    margin: 0;
+    scroll-behavior: smooth;
 }
 
 main {
-  margin-top: 10em;
+    margin-top: 10em;
+    @media (max-width: 380px) {
+        margin-top: 2em;
+    }
+}
+
+.header__content--social-phone {
+    margin-left: 4em;
+    @media (max-width: 380px) {
+        margin-left: 0em;
+    }
 }
 
 section {
-  padding: 4em 0 4em;
+    padding: 4em 0 4em;
 }
 
 .hm-layout-wrapper {
-  max-width: 1280px;
-  margin: 0 auto;
-  --mdc-layout-grid-margin-desktop: 0;
-  --mdc-layout-grid-margin-tablet: 0;
-  --mdc-layout-grid-margin-phone: 0;
+    max-width: 1280px;
+    margin: 0 auto;
+    --mdc-layout-grid-margin-desktop: 0;
+    --mdc-layout-grid-margin-tablet: 0;
+    --mdc-layout-grid-margin-phone: 0;
 }
 
 img {
-  aspect-ratio: attr(width) / attr(height);
+    aspect-ratio: attr(width) / attr(height);
 }
 
 // Material Icons
 main .material-icons {
-  padding: 10px;
-  border-radius: 6px;
-  svg {
-    width: 24px;
-    height: 24px;
-    path {
-      fill: var(--hm-grey--light);
+    padding: 20px;
+    border-radius: 100px;
+    svg {
+        width: 24px;
+        height: 24px;
+        path {
+            fill: var(--hm-white);
+        }
     }
-  }
 }
-.material-icons--green {
-  background-color: var(--hm-green--light);
-}
-.material-icons--neutral {
-  border: 1px solid var(--hm-grey--lighter);
-}
-.material-icons--orange {
-  background-color: var(--hm-orange--light);
-}
-//
 
+.material-icons--green {
+    background-color: var(--hm-green--light);
+}
+
+.material-icons--neutral {
+    border: 0px solid var(--hm-grey--lighter);
+    background-color: var(--hm-orange);
+}
+
+.material-icons--orange {
+    background-color: var(--hm-orange--light);
+}
+
+//
 // Zoom
 .zoom {
-  transition: transform .2s; /* Animation */
+    transition: transform .5s;
+    /* Animation */
 }
 
 .zoom:hover {
-  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-  background-color: fff;
-  box-shadow: 5px 10px 10px #ddd;
-  padding: 10px;
-  border-radius: 10px;
+    transform: scale(1.1);
+    /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    background-color: fff;
+    border-radius: 10px;
 }
