Update content, css, images

--- a/www.hookamonk.com/src/html/components/header2.njk
+++ b/www.hookamonk.com/src/html/components/header2.njk
@@ -65,7 +65,7 @@
             </svg>
           </a>
           <button class="button button__outlined">
-            <a href="#" class="button__label">I want Warp</a>
+            <a href="#warp" class="button__label">I want Warp</a>
           </button>
         </div>
         <div class="tm-hamburger mdc-layout-grid__cell">
@@ -99,7 +99,7 @@
         </svg>
       </a><br>
       <button class="button button__outlined">
-        <a href="#" class="button__label">I want Warp</a>
+        <a href="#warp" class="button__label">I want Warp</a>
       </button>
     </div>
 
