--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -29,14 +29,14 @@
   <section class="hm-intro">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
-        <div class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow bounceInLeft">
+        <div class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow bounceInLeft zoom">
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
                width="600px"
-               src="{{ "/hookamonk.com/img_header1.png" | cloudinaryUrl(width=600) }}"
-               srcset="{{ "/hookamonk.com/img_header1.png" | cloudinaryUrl(width=600) }} 1x,
-                     {{ "/hookamonk.com/img_header1.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
-                     {{ "/hookamonk.com/img_header1.png" | cloudinaryUrl(width=600,dpr=2) }} 2x" />
+               src="{{ "/hookamonk.com/img_header-4.png" | cloudinaryUrl(width=600) }}"
+               srcset="{{ "/hookamonk.com/img_header-4.png" | cloudinaryUrl(width=600) }} 1x,
+                     {{ "/hookamonk.com/img_header-4.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
+                     {{ "/hookamonk.com/img_header-4.png" | cloudinaryUrl(width=600,dpr=2) }} 2x" />
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <p class="title__prefix">We present warp</p>
@@ -94,7 +94,7 @@
       </div>
     </div>
   </section>
-  <section id="features" class="hm-features qt  wow rollIn">
+  <section id="features" class="hm-features qt  wow pulse">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -109,9 +109,7 @@
             </svg>
           </div>
           <h3>Say goodbye to charcoals</h3>
-          <p>Hookamonk is completely charcoal-less hookah. Tobacco is heated by spiral
-            controlled by smart electronic device. No more dirty job and bad smell at
-            your&nbsp;place.</p>
+          <p>Warp is completely charcoal-less hookah. Tobacco is heated by spirals controlled by a smart electronic device. No more dirty jobs and bad smells at your place.</p>
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
            <div class="material-icons material-icons--neutral">
@@ -121,9 +119,7 @@
             </svg>
           </div>
           <h3>Less staff needed</h3>
-          <p>You need shishaman only to fill the bowl with tobacco. Hookamonk takes care
-            of a pleasant smoking experience throughout the session without any external
-            assistance needed.</p>
+          <p>You only need a shishaman to fill the bowl with tobacco. Warp does the rest and takes care of a pleasant smoking experience throughout the session, no other assistance needed.</p>
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
            <div class="material-icons material-icons--neutral">
@@ -133,10 +129,7 @@
             </svg>
           </div>
           <h3>Pay per use</h3>
-          <p>You will pay us at the end of each month based on number of shishas served,
-            no initial downpayments. We earn when you earn. You earn, when your customers
-            enjoy smoking at your place. A&nbsp;truly win-win-win situation. Individual plans
-            available.</p>
+          <p>You will pay us at the end of each month based on the number of sessions served. We earn when you earn. You earn, when your customers enjoy Warp sessions at your place. A truly win-win-win situation.</p>
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
           <div class="material-icons material-icons--neutral">
@@ -146,8 +139,7 @@
             </svg>
           </div>
           <h3>First electronic hookah</h3>
-          <p>There is no e-liquid in hookamonk. You can use any tobacco you love and enjoy
-            its clear&nbsp;taste.</p>
+          <p>There is no e-liquid in Warp. You can use any tobacco you love and enjoy its clear taste.</p>
         </div>
 
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
@@ -158,9 +150,7 @@
             </svg>
           </div>
           <h3>Complete set provided</h3>
-          <p>Hookamonk consists of shisha box, computer and the electronic head with our
-            patented shisha funnel. No other stuff needed, you can smoke in 15&nbsp;minutes
-            after unpacking the device.</p>
+          <p>Hookamonk consists of hooka box, computer and the electronic head with our patented shisha funnel and heat management system. No other stuff needed, you can enjoy your smoking session just 12 minutes after unpacking the device.</p>
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
            <div class="material-icons material-icons--neutral">
@@ -170,9 +160,7 @@
             </svg>
           </div>
           <h3>Lounge app</h3>
-          <p>The Lounge App helps the lounge staff to manage Hookamonk devices. It
-            features an overview of running table sessions, monitors session run time,
-            maintenance status and allows to remotely control the hookahs.</p>
+          <p>The Lounge App helps the lounge staff to manage Warp devices. It features an overview of running table sessions, monitors sessions run time, maintenance status and allows remote control of all devices.</p>
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
           <div class="material-icons material-icons--neutral">
@@ -182,9 +170,7 @@
             </svg>
           </div>
           <h3>Consistent and full taste</h3>
-          <p>With hookamonk, the taste of tobacco remains full and constant during the
-            whole session. No extra tweaking needed and even hookah beginner can shine with
-            a delicious hookah.</p>
+          <p>With Warp, the taste of tobacco remains full and constant during the entire session. No extra tweaking needed and even hookah beginners can shine with a delicious hookah.</p>
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
            <div class="material-icons material-icons--neutral">
@@ -194,8 +180,7 @@
             </svg>
           </div>
           <h3>No burnt furniture</h3>
-          <p>Charcoals can easily burn your precious club furniture. No more burn marks
-            with Hookamonk.</p>
+          <p>Charcoals can easily burn your precious club furniture. No more burn marks with Warp.</p>
         </div>
 
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
@@ -206,9 +191,7 @@
             </svg>
           </div>
           <h3>Smart inhale detection</h3>
-          <p>Electronic head reacts to inhales. The tobacco is warmed only when you breath
-            in, the just right temperature is intelligently kept otherwise. No more
-            unpleasant sessions caused by bad charcoal management.</p>
+          <p>Warp electronic head reacts to inhales. The tobacco heats up only when you breathe in, constantly maintaining the ideal temperature. No more unpleasant sessions caused by poor charcoal management.</p>
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
           <div class="material-icons material-icons--neutral">
@@ -218,8 +201,7 @@
             </svg>
           </div>
           <h3>Intensity regulation</h3>
-          <p>Whether you like your hookah stronger or smoother, you can change its
-            intensity on display or in your mobile&nbsp;app.</p>
+          <p>Whether you like your hookah stronger or smoother, you can change its intensity on display or in your mobile app.</p>
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
           <div class="material-icons material-icons--neutral">
@@ -228,9 +210,8 @@
                     d="M17,13L12,18L7,13H10V9H14V13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"/>
             </svg>
           </div>
-          <h3>Features updated automatically</h3>
-          <p>Hookamonk is kept up to date thanks to connection to wifi. All of our devices
-            are updated automatically on regular&nbsp;basis.</p>
+          <h3>New features updated automatically</h3>
+          <p>Warp is kept up to date thanks to its wi-fi connection. All our devices are updated automatically on a regular basis.</p>
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop zoom">
            <div class="material-icons material-icons--neutral">
@@ -240,12 +221,11 @@
             </svg>
           </div>
           <h3>Mobile app</h3>
-          <p>Mobile app for Android and iOS. You can use it to change intensity of your
-            hookah or create a diary with your sessions.</p>
+          <p>Mobile app for Android and iOS. You can use it to change the intensity of your hookah or create a diary with your sessions.</p>
         </div>
       </div>
     </div>
-    <section id="partners" class="hm-partners wow bounceInLeft">
+    <section id="partners" class="hm-partners wow pulse">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -440,7 +420,7 @@
       </div>
     </div>
   </section>
-  <section id="warp" class="hm-warp wow bounceInRight">
+  <section id="warp" class="hm-warp wow pulse">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -450,27 +430,30 @@
         </div>
         <div class="hm-warp__type hm-warp__type--b2b mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop zoom">
           <h3>For <br>home</h3>
-          <h4>Fixed monthly fee, transparent pricing, no hidden charges</h4>
-          <p>✓ 2 weeks trial free of charge<br>
-             ✓  For personal use only</p>
+          <p>✓ Fixed monthly fee<br>
+             ✓ Transparent pricing<br>
+             ✓ No hidden charges<br>
+             ✓ For personal use only
+             </p>
           <button class="button button__contained button__contained--white">
             <a href="#" class="button__label">Next</a>
           </button>
         </div>
         <div class="hm-warp__type hm-warp__type--b2c mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop zoom">
           <h3>For workspace</h3>
-          <h4>No initial down payments</h4>
-          <p>✓ Monthly payments based on the number of Warp sessions served<br>
-             ✓ We earn when you earn, we earn when you have customers enjoying Warp session at your place</p>
+            <p>✓ No initial down payment<br>
+            ✓ Monthly rental charge<br>
+            ✓ Transparent pricing<br>
+            ✓ Additional services
+            </p>
           <button class="button button__contained button__contained--white">
             <a href="#" class="button__label">Next</a>
           </button>
         </div>
          <div class="hm-warp__type hm-warp__type--b2d mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop zoom">
-          <h3>For business</h3>
-          <h4>No initial down payments</h4>
-          <p>✓ Monthly payments based on the number of Warp sessions served<br>
-             ✓ We earn when you earn, we earn when you have customers enjoying Warp session at your place</p>
+          <h3>For hookah lounge</h3>
+           <p>✓ No initial down payment<br>
+            ✓ Monthly payments based on the number of Warp sessions served</p>
           <button class="button button__contained button__contained--white">
             <a href="#" class="button__label">Next</a>
           </button>
@@ -478,7 +461,7 @@
       </div>
     </div>
   </section>
-  <section id="testimonials" class="hm-testimonials wow bounceInLeft">
+  <section id="testimonials" class="hm-testimonials wow pulse">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -693,7 +676,7 @@
         </div>
         <div class="hm-product-type mdc-layout-grid__cell zoom">
           <div class="hm-product-type__img">
-            <img class="optimalization" alt="Warp Amina" loading="lazy" src="{{ "/hookamonk.com/img_products-amina.jpg" | cloudinaryUrl }}"
+            <img class="optimalization" alt="Warp Amina" loading="lazy" src="{{ "/hookamonk.com/img_products-amina-2.jpg" | cloudinaryUrl }}"
                  width="480"
                  height="300">
           </div>
@@ -749,10 +732,10 @@
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
                width="530px"
-               src="{{ "/hookamonk.com/img_catering-2.jpg" | cloudinaryUrl(width=530) }}"
-               srcset="{{ "/hookamonk.com/img_catering-2.jpg" | cloudinaryUrl(width=530) }} 1x,
-                     {{ "/hookamonk.com/img_catering-2.jpg" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
-                     {{ "/hookamonk.com/img_catering-2.jpg" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
+               src="{{ "/hookamonk.com/img_catering-3.jpg" | cloudinaryUrl(width=530) }}"
+               srcset="{{ "/hookamonk.com/img_catering-3.jpg" | cloudinaryUrl(width=530) }} 1x,
+                     {{ "/hookamonk.com/img_catering-3.jpg" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
+                     {{ "/hookamonk.com/img_catering-3.jpg" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <p class="title__prefix">Game changer in hookah world</p>
