--- a/www.hookamonk.com/src/stylesheets/v2/main.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/main.scss
@@ -28,6 +28,9 @@ main {
 
 section {
     padding: 4em 0 4em;
+    @media (max-width: 380px) {
+        padding: 2em 0 1em;
+    }
 }
 
 .hm-layout-wrapper {
