--- a/www.hookamonk.com/src/stylesheets/v2/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/typography.scss
@@ -70,6 +70,13 @@ a {
     text-decoration: none;
 }
 
+p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    color: var(--hm-grey--light);
+}
+
 .title__prefix {
     font-size: 16px;
     font-weight: 600;
@@ -106,23 +113,26 @@ a {
         font-size: 18px;
     }
     @media (min-width: 480px) {
-        padding: 16px 80px;
+        padding: 16px 60px;
     }
 }
 
 .button__outlined {
     background-color: var(--hm-white);
     border-radius: 4px;
-    border: 2px solid var(--hm-black);
+    border: 2px solid var(--hm-orange);
     a {
         font-size: 16px;
+        color: var(--hm-orange);
         text-transform: uppercase;
     }
     &:hover {
         background-color: var(--hm-orange);
-        color: var(--hm-white) !important;
-        border: 2px solid var(--hm-orange);
         transition: all 0.8s;
+        a {
+        color: var(--hm-white);
+        transition: all 0.8s;
+        }
     }
     @media screen and (min-width: 840px) {
         padding: 18px 48px;
@@ -135,8 +145,12 @@ a {
         color: var(--hm-white);
     }
     &:hover {
-        opacity: 60%;
+        background-color: var(--hm-orange);
         transition: all 0.8s;
+        a {
+        color: var(--hm-white);
+        transition: all 0.8s;
+        }
     }
 }
 
