--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -660,8 +660,8 @@
           <p class="facts__text">Satisfied Warp users </p>
         </div>
         <div class="facts mdc-layout-grid__cell">
-          <span class="facts__number" title="Number of users">1000+</span>
-          <p class="facts__text"></p>
+          <span class="facts__number" title="Number of users">10000+</span>
+          <p class="facts__text">Warp sessions</p>
         </div>
       </div>
     </div>
