--- a/www.hookamonk.com/src/stylesheets/v2/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/typography.scss
@@ -4,7 +4,7 @@
     --hm-grey: #4F4F4F;
     --hm-grey--dark: #333333;
     --hm-grey--light: #828282;
-    --hm-grey--lighter: #BDBDBD;
+    --hm-grey--lighter: #dfdfdf;
     --hm-orange: #EDA643;
     --hm-orange--light: #FFE6C5;
     --hm-green: #35B289;
@@ -102,7 +102,7 @@ p {
     }
     @media (max-width: 479px) {
         width: 100%;
-        height: 54px;
+        height: 60px;
     }
 }
 
