[www.hookamonk.com] Fixed layout and macros paths

--- a/www.hookamonk.com/src/html/v2/for-home-hookamonk/index.njk
+++ b/www.hookamonk.com/src/html/v2/for-home-hookamonk/index.njk
@@ -1,5 +1,5 @@
-{% extends '../layouts/main2.njk' %}
-{% from '../  macros/helpers.njk' import css, sprite %}
+{% extends 'layouts/main2.njk' %}
+{% from 'macros/helpers.njk' import css, sprite %}
 
 {% set page = 'hookamonk-catering' %}
 {% set language = en %}
