--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -40,7 +40,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <p class="title__prefix">We present warp</p>
-          <h1>Game <span class="text--orange"><strong>changer</span></strong> in hookah world</h1>
+          <h1>Game <span class="text--orange"><strong>changer</strong></span> in hookah world</h1>
           <p class="title__suffix">First fully electronic hookah set for tobacco.</p>
           <button class="button button__contained button__contained--dark">
             <a href="#about" class="button__label">Discover more</a>
