--- a/www.hookamonk.com/src/stylesheets/v2/main.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/main.scss
@@ -1,86 +1,124 @@
 @import "@material/layout-grid/mdc-layout-grid";
+
 :root {
-    --mdc-layout-grid-margin-desktop: 24px;
-    --mdc-layout-grid-gutter-desktop: 20px;
-    --mdc-layout-grid-column-width-desktop: 60px;
-    --hm-btn-transition: all 100ms ease-in-out;
+  --mdc-layout-grid-margin-desktop: 24px;
+  --mdc-layout-grid-gutter-desktop: 20px;
+  --mdc-layout-grid-column-width-desktop: 60px;
+  --hm-btn-transition: all 100ms ease-in-out;
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    scroll-behavior: smooth;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
 }
 
 main {
-    margin-top: 10em;
-    @media (max-width: 380px) {
-        margin-top: 2em;
-    }
+  margin-top: 10em;
+  @media (max-width: 380px) {
+    margin-top: 2em;
+  }
 }
 
 .header__content--social-phone {
-    margin-left: 4em;
-    @media (max-width: 380px) {
-        margin-left: 0em;
-    }
+  margin-left: 4em;
+  @media (max-width: 380px) {
+    margin-left: 0em;
+  }
 }
 
 section {
-    padding: 4em 0 4em;
-    @media (max-width: 380px) {
-        padding: 2em 0 1em;
-    }
+  padding: 4em 0 4em;
+  @media (max-width: 380px) {
+    padding: 2em 0 1em;
+  }
 }
 
 .hm-layout-wrapper {
-    max-width: 1280px;
-    margin: 0 auto;
-    --mdc-layout-grid-margin-desktop: 0;
-    --mdc-layout-grid-margin-tablet: 0;
-    --mdc-layout-grid-margin-phone: 0;
+  max-width: 1280px;
+  margin: 0 auto;
+  --mdc-layout-grid-margin-desktop: 0;
+  --mdc-layout-grid-margin-tablet: 0;
+  --mdc-layout-grid-margin-phone: 0;
 }
 
 img {
-    aspect-ratio: attr(width) / attr(height);
+  aspect-ratio: attr(width) / attr(height);
 }
 
 // Material Icons
 main .material-icons {
-    padding: 20px;
-    border-radius: 100px;
-    svg {
-        width: 24px;
-        height: 24px;
-        path {
-            fill: var(--hm-white);
-        }
+  padding: 20px;
+  border-radius: 100px;
+
+  svg {
+    width: 24px;
+    height: 24px;
+
+    path {
+      fill: var(--hm-white);
     }
+  }
 }
 
 .material-icons--green {
-    background-color: var(--hm-green--light);
+  background-color: var(--hm-green--light);
 }
 
 .material-icons--neutral {
-    border: 0px solid var(--hm-grey--lighter);
-    background-color: var(--hm-orange);
+  border: 0px solid var(--hm-grey--lighter);
+  background-color: var(--hm-orange);
 }
 
 .material-icons--orange {
-    background-color: var(--hm-orange--light);
+  background-color: var(--hm-orange--light);
 }
 
 //
 // Zoom
 .zoom {
-    transition: transform .5s;
-    /* Animation */
+  transition: transform .5s;
+  /* Animation */
 }
 
 .zoom:hover {
-    transform: scale(1.1);
-    /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-    background-color: fff;
-    border-radius: 10px;
+  transform: scale(1.1);
+  /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  background-color: fff;
+  border-radius: 10px;
+}
+
+//
+// Submit Form
+.hm-submit-form {
+  position: relative;
+  min-height: 700px;
+  background-repeat: no-repeat;
+  background-image: cloudinaryUrl("hookamonk.com/bg_form.png", ("width": 1200px));
+  background-size: 100% auto;
+  background-position: center;
+
+  .hm-submit-form__content {
+    padding: 4em 0;
+    height: 440px;
+    width: 800px;
+    background-color: rgba(255, 355, 255, 0.3);
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border-radius: 20px;
+    backdrop-filter: blur(12px);
+    color: #202020;
+    text-align: center;
+    h2 {
+      margin-bottom: 0;
+    }
+    p {
+      max-width: 600px;
+      margin: 0 auto 2em;
+    }
+  }
 }
