Hookamonk - Submit form css and html

--- a/www.hookamonk.com/src/html/v2/for-home/index.njk
+++ b/www.hookamonk.com/src/html/v2/for-home/index.njk
@@ -125,7 +125,7 @@
           <input type="text" name="name" placeholder="Name" required>
           <input type="text" name="email" placeholder="Email"  required>
           <input type="number" name="phone" placeholder="Telephone"  required>
-          <textarea rows="4" cols="50" name="comment" form="usrform">Enter text here...</textarea><br>
+          <textarea rows="4" cols="50" name="comment" form="usrform" placeholder="Enter text here..."></textarea><br>
           <button class="button button__contained button__contained--orange">
             <a type="submit" href="#about" class="button__label">Submit</a>
           </button>
