Hookamonk - New For Workspace Page

--- a/www.hookamonk.com/src/stylesheets/v2/footer.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/footer.scss
@@ -23,6 +23,7 @@
   }
 
   .footer__contact {
+    align-self: center;
     .footer__contact--name {
       span, p {
         text-transform: uppercase;
