--- a/www.hookamonk.com/src/html/v2/for-home/index.njk
+++ b/www.hookamonk.com/src/html/v2/for-home/index.njk
@@ -38,7 +38,7 @@
             <li>✔︎ For personal use only</li>
           </ul>
           <button class="button button__contained button__contained--orange">
-            <a href="#about" class="button__label">Next</a>
+            <a href="#hm-warp" class="button__label">Next</a>
           </button>
         </div>
         <div
@@ -55,7 +55,7 @@
     </div>
   </section>
   {{ css("v2/catering") }}
-  <section class="hm-warp">
+  <section id="hm-warp" class="hm-warp">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="hm-about__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -78,14 +78,14 @@
   <section id="" class=" qt  wow pulse">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <div class="order-1 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h2>Lorem <span class="text--orange">Warp</span></h2>
           <h3>Fringilla ipsum tincidunt</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus
             vestibulum
             scelerisque eu.</p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <div class="order-2 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <img title="Hookamonk while using photo"
                alt="[photo] Hookamonk while using photo"
                width="600px"
@@ -95,7 +95,7 @@
                      {{ "/hookamonk.com/img_for-home-2.png" | cloudinaryUrl(width=600,dpr=2) }} 2x"/>
 
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <div class="order-4 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <img title="Hookamonk while using photo"
                alt="[photo] Hookamonk while using photo"
                width="600px"
@@ -105,7 +105,7 @@
                      {{ "/hookamonk.com/img_for-home-3.png" | cloudinaryUrl(width=600,dpr=2) }} 2x"/>
 
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <div class="order-3 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h2>Lorem <span class="text--orange">Warp</span></h2>
           <h3>Fringilla ipsum tincidunt</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus
