--- a/www.hookamonk.com/src/stylesheets/v2/for-home.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/for-home.scss
@@ -20,5 +20,17 @@ h2 {
   }
 }
 
-.hm-examples {
+@media (max-width: 539px) {
+  .order-1 {
+    order: 1;
+  }
+  .order-2 {
+    order: 2;
+  }
+  .order-3 {
+    order: 3;
+  }
+  .order-4 {
+    order: 4;
+  }
 }
