--- a/www.hookamonk.com/src/stylesheets/v2/main.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/main.scss
@@ -123,7 +123,7 @@ main .material-icons {
     background-size: 100% auto;
     background-position: center;
       .hm-submit-form__content {
-        padding: 2.5em;
+        padding: 3.5em 2.5em 2.5em;
         height: 660px;
         width: 1000px;
         background-color: rgba(60, 60, 60, 0.35);
@@ -157,6 +157,8 @@ main .material-icons {
     background-color: #0a2137;
     form {
       input, textarea {
+        padding: 10px;
+        font-family: "Poppins", -apple-system;
         margin: 0.2em 0;
         height: 44px;
         width: 100%;
