--- a/www.hookamonk.com/src/html/v2/for-workspace/index.njk
+++ b/www.hookamonk.com/src/html/v2/for-workspace/index.njk
@@ -26,7 +26,7 @@
   {{ css("v2/typography") }}
   {{ css("v2/main") }}
   {{ css("v2/for-workspace") }}
-  <section class="for-home-intro">
+  <section class="hm-intro for-home-intro">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
